# LightWeightRender

LightWeightRenderer/: CMakeLists.txt  main.cpp
LightWeightRenderer/Asset/Material/: test.json  test1.json
LightWeightRenderer/Asset/RenderObject/: object_1.json  object_2.json
LightWeightRenderer/Asset/Shader/: const value.json
LightWeightRenderer/Asset/Shader/Lambert/: lambert.fragment  lambert.vertex
LightWeightRenderer/Asset/Shader/unlit/: unlit.fragment  unlit.vertex
LightWeightRenderer/Config/: ComponentConfig.json  Config.h  MaterialConfig.json  MeshConfig.json  ModuleConfig.json  ObjectConfig.json  ShaderConfig.json  TextureConfig.json
LightWeightRenderer/Config/Material/: MaterialConfig.json  test.json
LightWeightRenderer/Config/Mesh/: MeshConfig.json  ReadMe
LightWeightRenderer/Config/Shader/: ReadMe  ShaderConfig.json
LightWeightRenderer/Config/Shader/Default/: unlit.vertex
LightWeightRenderer/Include/glfw/3.3.4/include/GLFW/: glfw3.h
LightWeightRenderer/Source/: Module.h
LightWeightRenderer/Source/Head/: Renderer.h
LightWeightRenderer/Source/Head/Extend/: InfoPanel.h  TexturePacker.h
LightWeightRenderer/Source/Head/Extend/UI/: Image.h
LightWeightRenderer/Source/Head/Graph/: BaseRenderer.h  ModelLoader.h  RenderObject.h  RenderPipeline.h  RendererComponent.cpp  RendererComponent.h  Shader.h  VertexInfo.h  Window.h
LightWeightRenderer/Source/Head/Graph/BaseRender/: Camera.h  Material.h  Mesh.h  RenderComponent.h  RenderObject.h  Shader.h  Texture.h  Transform.h
LightWeightRenderer/Source/Head/Graph/GraphController/: AssetController.h  CameraController.h  GraphController.h  MaterialController.h  MeshController.h  RenderObjectController.h  ShaderController.h  TextureController.h
LightWeightRenderer/Source/Head/Graph/MeshLoader/: AssimpLoader.h  BaseLoader.h  GeneralLoader.h
LightWeightRenderer/Source/Head/Object/: BaseComponent.h  BaseObject.h  ComponentController.h  ObjectInfo.h  ObjectLoop.h
LightWeightRenderer/Source/Head/Physics/: CollisionDetection.h  InputController.h  Physics.h
LightWeightRenderer/Source/Head/Physics/InputController/: InputController.h  ShortcutController.h
LightWeightRenderer/Source/Head/Physics/InputEquip/: BaseEquip.h  KeyboardEquip.h  MouseEquip.h
LightWeightRenderer/Source/Head/RenderPanel/: BasePanel.h  InfoPanel.h  ShowPanel.h
LightWeightRenderer/Source/Source/: Renderer.cpp
LightWeightRenderer/Source/Source/Extend/: InfoPanel.cpp  TexturePacker.cpp
LightWeightRenderer/Source/Source/Extend/UI/: Image.cpp
LightWeightRenderer/Source/Source/Graph/: BaseRenderer.cpp  ModelLoader.cpp  RenderObject.cpp  RenderPipeline.cpp  Shader.cpp  VertexInfo.cpp  Window.cpp
LightWeightRenderer/Source/Source/Graph/BaseRender/: Camera.cpp  Material.cpp  Mesh.cpp  RenderObject.cpp  Shader.cpp  Texture.cpp  Transform.cpp
LightWeightRenderer/Source/Source/Graph/GraphController/: AssetController.cpp  CameraController.cpp  MaterialController.cpp  MeshController.cpp  RenderObjectController.cpp  ShaderController.cpp  TextureController.cpp
LightWeightRenderer/Source/Source/Graph/MeshLoader/: AssimpLoader.cpp  BaseLoader.cpp
LightWeightRenderer/Source/Source/Object/: BaseComponent.cpp  BaseObject.cpp  ComponentController.cpp  ObjectLoop.cpp
LightWeightRenderer/Source/Source/Physics/: CollisionDetection.cpp  InputController.cpp  Physics.cpp
LightWeightRenderer/Source/Source/Physics/InputController/: InputController.cpp  ShortcutController.cpp
LightWeightRenderer/Source/Source/Physics/InputEquip/: KeyboardEquip.cpp  MouseEquip.cpp
LightWeightRenderer/Source/Source/RenderPanel/: BasePanel.cpp  InfoPanel.cpp  ShowPanel.cpp
LightWeightRenderer/Utils/Head/: ConstUtil.h  DataSaveUtil.h  FileUtil.h  JsonUtil.h  LogUtil.h  MainLoopUtil.h  MathUtil.h  SortUtil.h  StringUtil.h  ThreadUtil.h  TraverUtil.h  TypeCastUtil.h  VoidQueueUtil.h
LightWeightRenderer/Utils/Source/: ConstUtil.cpp  DataSaveUtil.cpp  FileUtil.cpp  JsonUtil.cpp  LogUtil.cpp  MainLoopUtil.cpp  MathUtil.cpp  StringUtil.cpp  ThreadUtil.cpp  TypeCastUtil.cpp
